--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
 
         <div class="links">
             <div class="link-card">
-                <a href="https://civilgo.cn/tools">
+                <a href="https://civilgo.cn">
                     <div class="link-title">🧰 工具箱</div>
-                    <span class="url">civilgo.cn/tools</span>
+                    <span class="url">civilgo.cn</span>
                     <p style="margin-top:0.5rem;color:#636e72;font-size:0.9em">在线检测工具合集</p>
                 </a>
             </div>
