--- a/index.html
+++ b/index.html
@@ -158,10 +158,9 @@
                 <a href="https://civilgo.cn/software">
                     <div class="link-title">💻 桌面软件</div>
                     <span class="url">civilgo.cn/software</span>
-                    <p style="margin-top:0.5rem;color:#636e72;font-size:0.9em">迁移中……</p>
+                    <p style="margin-top:0.5rem;color:#636e72;font-size:0.9em">检测助手桌面版</p>
                 </a>
             </div>
-
         </div>
 
         <p class="notice">感谢您的理解与支持！由此带来的不便，敬请谅解。</p>
