--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <a href="https://civilgo.cn/blog">
                     <div class="link-title">📚 白话检测</div>
                     <span class="url">civilgo.cn/blog</span>
-                    <p style="margin-top:0.5rem;color:#636e72;font-size:0.9em">开发中……</p>
+                    <p style="margin-top:0.5rem;color:#636e72;font-size:0.9em">技术分享与交流</p>
                 </a>
             </div>
             <div class="link-card">
