--- a/index.html
+++ b/index.html
@@ -141,6 +141,13 @@
 
         <div class="links">
             <div class="link-card">
+                <a href="https://civilgo.cn">
+                    <div class="link-title">🏠 首页</div>
+                    <span class="url">civilgo.cn</span>
+                    <p style="margin-top:0.5rem;color:#636e72;font-size:0.9em">CivilGo主页入口</p>
+                </a>
+            </div>
+            <div class="link-card">
                 <a href="https://civilgo.cn/tools">
                     <div class="link-title">🧰 工具箱</div>
                     <span class="url">civilgo.cn/tools</span>
@@ -159,6 +166,20 @@
                     <div class="link-title">💻 桌面软件</div>
                     <span class="url">civilgo.cn/software</span>
                     <p style="margin-top:0.5rem;color:#636e72;font-size:0.9em">检测助手桌面版</p>
+                </a>
+            </div>
+            <div class="link-card">
+                <a href="https://civilgo.cn/docs">
+                    <div class="link-title">📖 文档中心</div>
+                    <span class="url">civilgo.cn/docs</span>
+                    <p style="margin-top:0.5rem;color:#636e72;font-size:0.9em">使用文档与帮助</p>
+                </a>
+            </div>
+            <div class="link-card">
+                <a href="https://civilgo.cn/logs">
+                    <div class="link-title">📋 更新日志</div>
+                    <span class="url">civilgo.cn/logs</span>
+                    <p style="margin-top:0.5rem;color:#636e72;font-size:0.9em">版本更新记录</p>
                 </a>
             </div>
         </div>
